--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@clerk/nextjs": "^5.0.0",
-        "next": "14.0.4",
-        "react": "^18",
-        "react-dom": "^18"
+        "@clerk/nextjs": "^6.31.1",
+        "@prisma/client": "^6.14.0",
+        "next": "15.4.6",
+        "react": "^19",
+        "react-dom": "^19",
+        "svix": "^1.73.0"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.12",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "autoprefixer": "^10.4.16",
-        "eslint": "^8",
-        "eslint-config-next": "14.0.4",
-        "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
+        "@types/node": "^24",
+        "@types/react": "^19.1.10",
+        "@types/react-dom": "^19",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9",
+        "eslint-config-next": "15.4.6",
+        "postcss": "^8.5.6",
+        "prisma": "^6.14.0",
+        "tailwindcss": "^4.1.12",
         "typescript": "^5"
     }
 }
