--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@clerk/nextjs": "^6.31.1",
         "@prisma/client": "^6.14.0",
+        "daisyui": "^5.0.50",
         "next": "15.4.6",
         "react": "^19",
         "react-dom": "^19",
