Implement Plaid link account button

--- a/env.example
+++ b/env.example
@@ -8,3 +8,14 @@ CLERK_SECRET_KEY=sk_test_your_secret_key_here
 # NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 # NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 # NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+
+# Prisma postgres auth
+DATABASE_URL="postgresql://postgres:admin@localhost:5433/postgres?schema=fundraising_app"
+
+# Plaid Environment
+PLAID_CLIENT_ID=your_client_id
+PLAID_SECRET=your_sandbox_secret
+PLAID_ENV=sandbox
+NEXT_PUBLIC_PLAID_ENV=sandbox
+PLAID_APP_NAME="Fundraising App"
+PLAID_LANGUAGE="en"
